<resources>
    <string name="app_name">Mi viaje</string>
    <string name="register_trip">Elija tu viaje</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="sing_in">Iniciar Sesión</string>
    <string name="does_not_have_account"><b>¡No tienes cuenta Registrate!</b></string>
    <string name="repeat_password">Repita la contraseña</string>
    <string name="register">Registrarme</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="name">Nombres:</string>
    <string name="phone">Celular:</string>
    <string name="email_text_view">correo</string>
    <string name="autenticado">autenticado</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_tickets">Tiquetes</string>
    <string name="title_reservation">Mi Reserva</string>
    <string name="title_profile">Perfil</string>
    <string name="route">Ruta:</string>
    <string name="route1">Santa Bárbara - Medellin</string>
    <string name="route2">Medellin - Santa Bárbara</string>
    <string name="schedule">Horario:</string>
    <string name="travel_schedule">Horario de viaje</string>
    <string name="available_seats">Asientos disponibles:</string>
    <string name="reserve_chairs">Reserva de asientos:</string>
    <string name="reserve_chairs_spinner">Reserva de asiento</string>
    <string name="continue1">Continuar</string>
    <string name="happy_journey">¡FELIZ VIAJE!</string>
    <string name="reserved_data">Datos reservados:</string>
    <string name="choose_site">ELIJA SITIO DE ABORDAJE</string>
    <string name="one_approach">Parador la Antena</string>
    <string name="two_approach">Carrera 50</string>
    <string name="three_approach">Casa Blanca</string>
    <string name="four_approach">Terminal Santa Barbara</string>
    <string name="return_button">Regresar</string>
    <string name="reservation">RESERVA</string>
    <string name="seating">Asientos:</string>
    <string name="hour">Hora:</string>
    <string name="location">Ubicación:</string>
    <string name="value">Valor:</string>
    <string name="payment">Medio de pago</string>
    <string name="profile">PERFIL</string>
    <string name="Username">Usuario:</string>
    <string name="change_account">Cambiar datos de cuenta</string>
    <string name="password_new">Nueva contraseña</string>
    <string name="repeat_password_new">Repita nueva contraseña</string>
    <string name="update_data">Actualizar datos</string>
    <string name="terms_conditions">TÉRMINOS Y CONDICIONES</string>
    <string name="Condition">En este contrato se contienen los términos y condiciones que rigen el acceso y uso del aplicativo Mi Viaje, así como el uso de las aplicaciones del Sitio Web, y el uso de las aplicaciones móviles que se enlacen o estén referenciados a dichos Términos y Condiciones.</string>
    <string name="pse">pse</string>
    <string name="successful_payment">¡TU PAGO SE REGISTRO \n CORRECTAMENTE!</string>
    <string name="successful_payment_two">Ten en cuenta que debes estar 10 \n minutos antes en el punto \n de abordaje</string>
    <string name="successful_payment_three">¡Muchas gracias por preferirnos!</string>
    <string name="register_here">Regístrate aquí</string>
    <string name="Register">REGISTRO</string>
    <string name="terms_and_Conditions">Acepto Términos y Condiciones</string>
    <string name="radio_button_empty" />
    <string name="avatarIUser_imageView">vista avatar</string>
    <string name="showUser_textView">"muestra usuario "</string>
    <string name="avatar_imageView">imagen</string>
    <string name="name_profile">Usuario</string>
    <string name="username">Nombres</string>
    <string name="phone_profile">Celular</string>
    <string name="license_plate">Placa:</string>
    <string name="one_approach_2">Terminal del Sur - Medellin</string>
    <string name="new_name">Nuevo nombre</string>
    <string name="New_phone">Nuevo celular</string>
    <string name="new_phone">Nuevo celular</string>
    <string name="seats">Disponibles</string>
    <string name="two_approach_2">Estación Ayura</string>
    <string name="three_approach_3">Itagui - Autopista sur</string>
    <string name="four_approach_2">La estrella - Autopista sur</string>
    <string name="route_2">Ruta escogida</string>
    <string name="seating_2">Asientos escogidos</string>
    <string name="hout_2">Hora escogida</string>
    <string name="location_2">Ubicación escogida</string>
    <string name="value_2">Valor a pagar</string>
    <string name="license_plate_2">Placa de vehiculo</string>
    <string-array name="Horarios_spinner">
        <item>06:00 A.M.</item>
        <item>07:00 A.M.</item>
        <item>08:00 A.M.</item>
        <item>09:00 A.M.</item>
        <item>10:00 A.M.</item>
        <item>11:00 A.M.</item>
        <item>12:00 P.M.</item>
        <item>01:00 P.M.</item>
        <item>02:00 P.M.</item>
        <item>03:00 P.M.</item>
        <item>04:00 P.M.</item>
        <item>05:00 P.M.</item>
        <item>06:00 P.M.</item>
    </string-array>
    <string-array name="Asientos_spinner">
        <item>Un asiento</item>
        <item>Dos asientos</item>
        <item>Tres asientos</item>
        <item>Cuatro asientos</item>
    </string-array>



</resources>